tests/integration/fail/array_contract_fn_is_not_an_array.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
(fun x => x) | Array Dyn